Fixing overlap of numbers and text in IE

--- a/src/report/css/report.styl
+++ b/src/report/css/report.styl
@@ -60,10 +60,6 @@ html, body
   text-align center
 }
 
-.num-of-fires__wraper {
-  display: inline-block;
-}
-
 .num-of-fires__content {
   display: flex;
   align-items: center;
@@ -89,15 +85,14 @@ html, body
   font-size: 4em;
   color: #E50017;
   margin: 0 .5rem
-  flex: 1 1 75px;
   min-width: 100px;
 }
 
 .fire-alert__container {
-  display: flex;
-  flex-direction: column;
   text-align: left;
-  text-transform capitalize
+  p {
+    margin: 0
+  }
 }
 
 .map-container
